tests/ui/attributes/crate-type-delimited.stderr
error: malformed `crate_type` attribute input
  --> $DIR/crate-type-delimited.rs:2:1
   |
LL | #![crate_type(lib)]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/linkage.html>

error: aborting due to 1 previous error

